--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,26 @@
---- 
-title: "Applied Statistical Genetics"
-author: "Dr. Pratheesh P Gopinath"
-date: "`r Sys.Date()`"
-site: bookdown::bookdown_site
 ---
+title: "Applied Statistical Genetics"
+author: "Dr. Pratheesh P. Gopinath, PhD"
+date: "2022-01-30"
+site: bookdown::bookdown_site
+documentclass: book
+bibliography: [book.bib]
+biblio-style: apalike
+link-citations: yes
+github-repo: https://github.com/pratheesh3780/Applied-statistical-genetics
+description: "A book for Agricultural research"
+cover-image: images/coverpage.PNG
+---  
+ 
 
-# Down the rabbit-hole
+# Applied Statistical Genetics {-} 
+<p style="text-align: center;"><a href="https://coavellayani.kau.in/people/dr-pratheesh-p-gopinath"><img src="images/coverpage.png" alt="DAEA cover" /></a></p>  
+
+# Preface {-}
+
+<p style="text-align: justify;"> **Note**: This book is published by XXXXXXXX. The online version of this book is free to read here, and licensed under the [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](http://creativecommons.org/licenses/by-nc-sa/4.0/). If you have any feedback, please feel free to [file an issue on GitHub](https://github.com/pratheesh3780/Applied-statistical-genetics). Thank you!</p>
+
+<p style="text-align: center;">This book is for all the researchers in Agriculture for improving quality of research </p>  
+
+
 
